src/objects/Milestone1_Expense__c.object
<CustomObject>
    <description>Force.com Labs - PM - The expense object captures monetary expenses for a milestone task.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>費用の合計額。</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <inlineHelpText>費用が発生した日付。デフォルトでは今日の日付が入る。</inlineHelpText>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>費用の説明。例えば、なぜこの費用が発生したのか、など。</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>この費用を利用した人。デフォルトでは現在のユーザが入る。</inlineHelpText>
        <label>Incurred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Expenses_Incurred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <inlineHelpText>この費用が発生したタスク。</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Project_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PEXP-{0000}</displayFormat>
        <label>Project Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>